changed dns record,IP

--- a/21-Azure-Private-DNS-Zones/terraform-manifests/app-scripts/app1.conf
+++ b/21-Azure-Private-DNS-Zones/terraform-manifests/app-scripts/app1.conf
@@ -12,8 +12,8 @@ ProxyPass /webvm !
 #ProxyPassReverse / http://10.1.11.241/
 
 # Use the below when using Private DNS Section 
-ProxyPass / http://applbr.devopsdemo.com/
-ProxyPassReverse / http://applbr.devopsdemo.com/
+ProxyPass / http://webapp1.learnazdevops.com/
+ProxyPassReverse / http://webapp1.learnazdevops.com/
 
 DocumentRoot /var/www/html
 <Directory /var/www/html>
