--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ crash.log
 .azure/msal_http_cache.bin
 .azure/msal_token_cache.json
 .azure/telemetry.txt
+.azure
 .gitconfig
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
